--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,46 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
-	title: string;
+	title?: string;
+	description?: string;
+	image?: string;
+	headerIntro?: boolean;
 }
 
-const { title } = Astro.props;
+// const {
+// 	title = 'HIRASHIKI RAFAEL',
+// 	description = 'A Junior Front End Engineer portfolio. Portuguese, Japanese, English and Spanish speaker.',
+// 	image="/images/rafa.jpg"
+// } = Astro.props;
+
+const {title, description, image, headerIntro} = Astro.props
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
+
 	<body>
+		<Header headerIntro={headerIntro}/>
+		
 		<slot />
+
+		<Footer/>
 	</body>
+
 </html>
+
 <style is:global>
 	:root {
 		--accent: 136, 58, 234;
@@ -31,10 +52,10 @@ const { title } = Astro.props;
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
+		--clr-bg: #0F2132;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
 		background-size: 224px;
 	}
 	code {
@@ -48,4 +69,15 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
+
+	.clr-bg {
+          background-color: var(--clr-bg);
+		  color: "white";
+	}
+
+	.li-year,
+	.li-role {
+		font-size: 12px;
+	}
+	
 </style>
