--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,13 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { ViewTransitions } from "astro:transitions";
+import Main from "../components/Main.astro";
 
 interface Props {
-	title?: string;
-	description?: string;
-	image?: string;
-	headerIntro?: boolean;
+  title?: string;
+  description?: string;
+  image?: string;
+  headerIntro?: boolean;
 }
 
 // const {
@@ -16,68 +17,86 @@ interface Props {
 // 	image="/images/rafa.jpg"
 // } = Astro.props;
 
-const {title, description, image, headerIntro} = Astro.props
+const { title, description, image, headerIntro } = Astro.props;
+
+import { getCollection } from "astro:content";
+const projects = await getCollection("projects");
+// console.log(projects);
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content={description} />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<ViewTransitions />
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <ViewTransitions />
 
-	<body>
-		<Header headerIntro={headerIntro}/>
-		
-		<slot />
+	<!-- Font -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  </head>
 
-		<Footer/>
-	</body>
+  <body class="grid grid-cols-12">
+    <Header headerIntro={headerIntro} />
+    <Main projects={projects}>
+      <slot />
+    </Main>
+    <!-- <Footer/> -->
+    <style is:global>
+      :root {
+        --accent: 136, 58, 234;
+        --accent-light: 224, 204, 250;
+        --accent-dark: 49, 10, 101;
+        --accent-gradient: linear-gradient(
+          45deg,
+          rgb(var(--accent)),
+          rgb(var(--accent-light)) 30%,
+          white 60%
+        );
+        --clr-bg: #0f2132;
+      }
+      html {
+        font-family: system-ui, sans-serif;
+        background-size: 224px;
+      }
+      code {
+        font-family:
+          Menlo,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
+      }
 
+      .clr-bg {
+        background-color: var(--clr-bg);
+        color: "white";
+      }
+
+      .li-year,
+      .li-role {
+        font-size: 12px;
+      }
+
+	  .photo_div {
+		border-radius: 50%;
+		width: fit-content;
+	  }
+
+	  .material-symbols-outlined {
+		background-color:black;
+		width: 40px;
+		height: 40px;
+		border-radius:5px;
+		color: white;
+		font-size: 40px;
+	  }
+    </style>
+  </body>
 </html>
-
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-		--clr-bg: #0F2132;
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-
-	.clr-bg {
-          background-color: var(--clr-bg);
-		  color: "white";
-	}
-
-	.li-year,
-	.li-role {
-		font-size: 12px;
-	}
-	
-</style>
