--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,20 @@
 import Layout from "../layouts/Layout.astro";
 import Main from "../components/Main.astro";
 import H1 from "../components/H1.astro";
+import { Image } from "astro:assets";
 ---
 
 <Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIntro={true}>
-  <Main>
-  </Main>
+    <div class="photo_div m-auto">
+      <Image
+        src="/Images/rafa.png"
+        width={500}
+        height={500}
+        format="webp"
+        alt="Japanese looking guy from Brazil wearing stylish clothes"
+        class="rounded-2x1 aspect-thumbnail object-cover rounded-full "
+      />
+    </div>
 </Layout>
 
 <style>
