Home Page layout

--- a/src/components/H1.astro
+++ b/src/components/H1.astro
@@ -6,4 +6,4 @@ interface Props {
 const { text } = Astro.props;
 ---
 
-<h1 class="text-6xl text-blue-600 font-bold">{text}</h1>
+<h1 class="text-6xl font-bold min-xl:text-5xl ">{text}</h1>
