--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,11 +54,11 @@ const projects = await getCollection("projects");
     /> -->
     <Header
       headerIntro={headerIntro}
-      class="w-full h-screen col-start-1 col-span-5"
+      class="w-full h-screen col-start-1 col-span-5 clr-bg py-8 grid grid-cols-5"
     />
     <Main
       projects={projects}
-      class="w-full h-screen col-start-6 col-span-7 max-md:px-24 relative"
+      class="w-full h-screen col-span-7 max-md:px-24 relative"
     >
       <slot />
     </Main>
@@ -149,6 +149,7 @@ const projects = await getCollection("projects");
       .li-year,
       .li-role {
         font-size: 12px;
+        line-height: 1.8;
       }
 
       .photo_div {
@@ -162,7 +163,8 @@ const projects = await getCollection("projects");
         height: 40px;
         border-radius: 5px;
         color: white;
-        font-size: 40px;
+        font-size: 32px;
+        padding: 4px;
       }
     </style>
   </body>
