--- a/src/components/Rafa-pic.astro
+++ b/src/components/Rafa-pic.astro
@@ -10,6 +10,6 @@ const { class: className, ...rest } = Astro.props;
     height={450}
     format="webp"
     alt="Japanese looking guy from Brazil wearing stylish clothes"
-    class="rounded-2x1 aspect-thumbnail object-cover rounded-full"
+    class="rounded-2x1 aspect-thumbnail object-cover rounded-full m-auto"
   />
 </div>
