--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,11 +54,15 @@ const projects = await getCollection("projects");
     /> -->
     <Header
       headerIntro={headerIntro}
-      class="w-full h-screen col-start-1 col-span-5 clr-bg py-8 grid grid-cols-5"
+      class={`w-full h-screen col-start-1 ${
+        headerIntro ? "col-span-5" : "col-span-4"
+      } clr-bg py-8 grid grid-cols-5`}
     />
     <Main
       projects={projects}
-      class="w-full h-screen col-span-7 max-md:px-24 relative"
+      class={`w-full h-screen ${
+        headerIntro ? "col-span-7" : "col-span-8"
+      }  max-md:px-24 relative`}
     >
       <slot />
     </Main>
@@ -76,6 +80,7 @@ const projects = await getCollection("projects");
         );
 
         --clr-bg: #0f2132;
+        --clr-coder: #00d9f7;
       }
 
       /* reset  */
@@ -123,7 +128,7 @@ const projects = await getCollection("projects");
 
       a:hover {
         cursor: pointer;
-      } 
+      }
 
       /* img {
         width: 100%;
@@ -165,6 +170,13 @@ const projects = await getCollection("projects");
         color: white;
         font-size: 32px;
         padding: 4px;
+      }
+
+      .grid-item-ball > span:nth-child(2) {
+        display: block;
+        width: fit-content;
+        margin: auto;
+        color: var(--clr-coder);
       }
     </style>
   </body>
