--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import RafaPic from "../components/Rafa-pic.astro";
 ---
 
 <Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIntro={true}>
-  <RafaPic class=" absolute z-20 -top-40 bottom-0 right-0 -left-40 photo_div m-auto h-fit w-3/6"/>
-  <div class="absolute z-30 m-auto -top-56 bottom-0 -left-44 right-16 h-fit w-6/6" >
+  <RafaPic class=" absolute z-20 -top-40 bottom-0 right-0 -left-40 photo_div m-auto h-fit w-5/12 "/>
+  <div class="absolute z-30 top-0 bottom-0 m-auto right-20 h-fit w-6/6" >
     <Image
       src="/Images/logos.png"
       width={2200}
