--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const { headerIntro, class: className, ...rest } = Astro.props;
 <header class={className} {...rest}>
   <div class="grid-start-1 col-span-1">
     <H1 text="HIRASHIKI RAFAEL" index={false} />
-    <p>powered by Astro</p>
+    <p class="absolute bottom-0">powered by Astro</p>
   </div>
   <Image
     src="/Images/stars-topleft.svg"
