--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -24,8 +24,8 @@ console.log(project.data.projectBulletList);
         width={144}
         height={213}
         format="png"
-        alt="figma logo"
-        class="material-symbols-outlined "
+        alt="github logo"
+        class="url-logo-black "
       />
       <p>Github</p>
     </a>
@@ -36,12 +36,12 @@ console.log(project.data.projectBulletList);
         height={213}
         format="svg"
         alt="figma logo"
-        class="material-symbols-outlined"
+        class="url-logo-black"
       />
       <p>Figma</p>
     </a>
     <a href={project.data.projectURL} class="flex flex-col items-center w-fit col-start-7">
-      <span class="material-symbols-outlined"> open_in_new</span>
+      <span class="url-logo-black"> open_in_new</span>
       <p>Project</p>
     </a>
   </div>
