--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,13 +37,14 @@ const projects = await getCollection("projects");
     <ViewTransitions />
 
     <!-- Font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
+    <script
+      src="https://kit.fontawesome.com/2a7d8b909e.js"
+      crossorigin="anonymous"></script>
   </head>
 
-  <body class={`grid grid-cols-12 ${headerIntro && "clr-bg"}`}>
+  <body
+    class={`grid grid-cols-12 ${headerIntro && "clr-bg"} overflow-y-hidden`}
+  >
     <!-- <Image
       src="/Images/stars-bg.svg"
       width={1920}
@@ -62,7 +63,7 @@ const projects = await getCollection("projects");
       projects={projects}
       class={`w-full h-screen ${
         headerIntro ? "col-span-7" : "col-span-8"
-      }  max-md:px-24 relative`}
+      }  max-md:px-24 relative overflow-y-scroll css-no-scrollbar`}
     >
       <slot />
     </Main>
@@ -81,6 +82,7 @@ const projects = await getCollection("projects");
 
         --clr-bg: #0f2132;
         --clr-coder: #00d9f7;
+        --clr-sys: #ff9900;
       }
 
       /* reset  */
@@ -161,15 +163,20 @@ const projects = await getCollection("projects");
         border-radius: 50%;
         width: fit-content;
       }
-
-      .material-symbols-outlined {
+      .url-logo-black {
         background-color: black;
         width: 40px;
         height: 40px;
         border-radius: 5px;
-        color: white;
-        font-size: 32px;
         padding: 4px;
+      }
+
+      .url-logo {
+        background-color: transparent;
+        width: 42px;
+        height: 42px;
+        border-radius: 5px;
+        padding: 0;
       }
 
       .grid-item-ball > span:nth-child(2) {
@@ -178,6 +185,14 @@ const projects = await getCollection("projects");
         margin: auto;
         color: var(--clr-coder);
       }
+      
+      .css-no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
+      .css-no-scrollbar::-webkit-scrollbar {
+        display: none;
+      } /* Hide scrollbar for IE, Edge, and Firefox */
     </style>
   </body>
 </html>
